--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,18 @@
-spring.jpa.hibernate.ddl-auto=none
+spring.h2.console.enabled=true
 
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://sql2.freemysqlhosting.net:3306/sql2298180
-spring.datasource.username=sql2298180
-spring.datasource.password=hU8!fB8!
-spring.datasource.tomcat.max-wait=20000
-spring.datasource.tomcat.max-active=50
-spring.datasource.tomcat.max-idle=20
-spring.datasource.tomcat.min-idle=15
+# ===============================
+# DB
+# ===============================
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.id.new_generator_mappings = false
-spring.jpa.properties.hibernate.format_sql = true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE 
-# =============================================
-# VIEW RESOLVER
-# =============================================
+# ===============================
+# JPA / HIBERNATE
+# ===============================
 
-spring.mvc.view.prefix=/WEB-INF/jsp/
-spring.mvc.view.suffix=.jsp
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
