--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 jwt.token.secret = secret
 jwt.token.expired = 3600000
+
+passwordServ = admin
